<resources>
    <string name="app_name">Mafia</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="player_name">Player Name</string>
    <string name="confirm">Confirm</string>
    <string name="game_room_name">Game Room Name</string>
    <string name="player_list">Player List</string>
    <string name="search_game">Searching for game...</string>
    <string name="start_game">Start Game</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="role">Role</string>
    <string name="length">Round Length</string>
    <string-array name="round_length_list">
        <item>1 minute</item>
        <item>2 minute</item>
        <item>3 minute</item>
        <item>4 minute</item>
        <item>5 minute</item>
    </string-array>
    <string name="rules_general">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Nulla pellentesque eu leo fermentum ullamcorper. Aenean venenatis turpis velit, at facilisis
        sem eleifend ac. Aliquam ullamcorper mi ut sem sollicitudin consectetur. Proin sollicitudin, d
        ui a fringilla malesuada, nisl augue pharetra tortor, auctor laoreet ante metus facilisis felis.
        Phasellus malesuada iaculis varius. Nam ut felis erat. Ut convallis nulla scelerisque venenatis f
        inibus. Quisque sed varius est, vitae scelerisque nulla. Nullam lacinia metus dui, eget ultricies
        urna rhoncus vitae.

        Nullam molestie leo sollicitudin velit suscipit, eu ornare justo aliquam. Fusce sag
        ittis erat id mi rhoncus ornare. Nunc bibendum posuere risus vitae auctor. Integer et nul
        la sed lacus porta porta id non enim. Duis interdum pharetra urna, eu euismod risus facilisis
        sed. Fusce imperdiet lorem neque, id congue ipsum molestie at. Proin laoreet neque in augue dapibu
        s, sit amet fringilla purus faucibus.</string>
    <string name="rules_general">The Mafia, CS-m117 project presents party game, that takes place in a conflict between the Mafia – the informed minority – and
        the Innocents – the uninformed majority.
            This game has two phases; night, when special characters get to make their move, and “day” when Innocents vote to eliminate a
        Mafiosi suspects that try to hide along them! The game ends when all the Mafia members are eliminated or there are more(smt same) Mafia members than Innocents.
        The main goal of the Mafia is just too kill evryone, meanwhile citizens jsut want to find who is mafia and get ride of them. *PLEASE DONT PICK N EACH TOHER PHONES DURING THE NIGHT STAGE*
    </string>
    <string name="rules_mafia">The Mafia - bad guys of the game, who want to burn down the city and have to kill all innocents first.
        These players know the identities of their teammates and can determine who will be killed every night.</string>
    <string name="rules_doctor">The holly Angel of the city! An innocent who plays plays on the good team and puts his goal to protect other incests.
        Can protect one person every night from being killed by the mafia(CAN PICK HIMSELF ONLY TWICE!)</string>
    <string name="rules_villager">Innocent people of the game also known as “townspeople”. These players dont have any special roles or powers, they can enjoy and have fun trying to survive and figure out the Mafiosi along them!
        </string>
    <string name="rules_sheriff">The Detective of the city! An innocent who plays plays on the good team and puts his main goal to find a mafia.
        Has special ability to learn the team of one of the players every night. Have to be careful revealing him self, because mafia definitely will try to kill him first!</string>
</resources>

